Fix a 1px misalignment of the "more" button (posts) - should fix #2108 thanks nwsw for the original fix

--- a/themes/default/css/_besocial/index_besocial.css
+++ b/themes/default/css/_besocial/index_besocial.css
@@ -492,7 +492,7 @@ div.bbc_footnotes .meaction {
 	color: #555;
 	text-decoration: none;
 }
-.listlevel1.subsections {
+#main_menu .listlevel1.subsections {
 	top: -1px;
 }
 .poster .listlevel1 a.linklevel1 {
